# GAUGE

./: .dockerignore  .env.example  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  environment.yml  kg_types.py  pyproject.toml  requirements.txt  run_gauge.bat  run_gauge.sh
GAUGE_publication_bundle/: README.md
GAUGE_publication_bundle/docs/: OPTIONAL_HEAVY_DEPENDENCIES.md  README.md
GAUGE_publication_bundle/manifests/: absolute_path_audit.txt  targets_manifest.txt
GAUGE_publication_bundle/runtime/: env.sh  run_01_random_cell_split.sh  run_02_drug_split.sh  run_07_tcga_task01.sh  run_cnm_core.sh  run_cnm_noveldrug.sh  run_peru_abc.sh  run_publication_v7_step1_2_3.sh  smoke_check.sh
GAUGE_publication_bundle/snapshots/: 01_random_cell_split_HVG2000_true  02_drug_split_HVG2000_true  Peru_A  Peru_B  (+5 more)
app/: Home.py  common.py
docs/: DATA_SOURCES.md  FAQ.md  INSTALL.md  USER_GUIDE.md
example_data/: example_design_generated_candidates.csv  example_design_seed_molecules.csv  example_drugcomb_pairs.csv  example_expression_genes_as_rows.csv  example_expression_multi_sample.csv  example_expression_prism_demo.csv  example_expression_single_sample.csv  example_gtex_median_tpm_by_tissue.csv  example_tcga_patients.csv  example_tcga_patients_meta.csv
gauge_core/: __init__.py  _drugwm_path.py  _env.py  agent.py  bio_tools.py  bundle.py  expression_io.py  kg_tools.py  moldesign.py  predict.py  providers.py
scripts/: export_model_bundle.py  extract_demo_data.py
tests/: test_agent.py  test_app_pages.py  test_bio_tools.py  test_gauge_core.py  test_moldesign.py
(+392 files in other folders)
